--- a/package.json
+++ b/package.json
@@ -6,26 +6,32 @@
     "dependencies": {
         "bootstrap": "4.1.3",
         "history": "4.7.2",
-        "node-sass": "4.6.1",
-        "node-sass-chokidar": "1.3.3",
-        "npm-run-all": "4.1.3",
-        "react": "16.4.2",
-        "react-dom": "16.4.2",
+        "node-sass": "^4.12.0",
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
         "react-chartjs-2": "^2.7.4",
         "react-perfect-scrollbar": "1.2.0",
         "react-router-dom": "4.2.2",
-        "react-scripts": "1.1.5",
-        "react-chartjs-2": "^2.7.4",
+        "react-scripts": "^3.4.1",
         "chart.js": "2.7.2",
         "reactstrap": "6.4.0"
     },
     "scripts": {
-        "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-        "start-js": "react-scripts start",
-        "start": "npm-run-all -p watch-css start-js",
-        "build": "npm run build-css && react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
         "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
